se agregan nuevas funcionalidades y clases, patrones y se corrigen errores